Prepped Dev Branch for Merge into Master
Began building the Updates Seciton

Hid Inactive Links

Disabled Devmode in JS

Entered placeholder rules into CSS Rulesets
> .index-content-section > .updates{content:none;}

--- a/rig-navigation.html
+++ b/rig-navigation.html
@@ -34,10 +34,10 @@
 				</div>
 
 				<div class="nav-item" onclick="openInternal('rig-navigation')">Rigs</div>
-				<div class="nav-item" onclick="openInternal( 'projects')">
+				<div class="nav-item" onclick="openInternal( 'projects')" hidden>
 					Projects
 				</div>
-				<div class="nav-item" onclick="openInternal( 'contact')">
+				<div class="nav-item" onclick="openInternal( 'contact')" hidden>
 					Contact
 				</div>
 			</div>
