--- a/slacme-rig.html
+++ b/slacme-rig.html
@@ -34,10 +34,10 @@
 				</div>
 
 				<div class="nav-item" onclick="openInternal('rig-navigation')">Rigs</div>
-				<div class="nav-item" onclick="openInternal( 'projects')">
+				<div class="nav-item" onclick="openInternal( 'projects')" hidden>
 					Projects
 				</div>
-				<div class="nav-item" onclick="openInternal( 'contact')">
+				<div class="nav-item" onclick="openInternal( 'contact')" hidden>
 					Contact
 				</div>
 			</div>
@@ -96,7 +96,7 @@
 -->
 
 				<div class="download-lr download-extra" onclick="downloadSLACME(true)">Latest Release</div>
-				<div onclick="openInternal('sacr-rig')" class="links">Go to SACR</div>
+				<div onclick="openInternal('sacr-rig')"><span class="links"Go to SACR</span></div>
 			</div>
 
 		</div>
