--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 					</div>
 
 					<div class="nav-item" onclick="openInternal('rig-navigation')">Rigs</div>
-					<div class="nav-item" onclick="openInternal( 'projects')">
+					<div class="nav-item" onclick="openInternal( 'projects')" hidden>
 						Projects
 					</div>
-					<div class="nav-item" onclick="openInternal( 'contact')">
+					<div class="nav-item" onclick="openInternal( 'contact')" hidden>
 						Contact
 					</div>
 				</div>
@@ -63,7 +63,8 @@
 
 	<!-- Begin page Content -->
 	<div class="index-content-section">
-		<div class="about">
+		<!-- Biography -->
+	  <div class="about">
 			<div class="title">
 				<h1>Who am I</h1>
 
@@ -78,35 +79,18 @@
 				writting and directing a Zombie Survival Machinima called Parallel Z.
 			</p>
 		</div>
-
+		
+		<!-- Updates -->
 		<div class="updates" hidden>
-			<div class="col-contain">
-
-				<div class="col">
-					<div class="title">
-						<h1>Latest Video</h1>
-					</div>
-					<div class="video">
-
-					</div>
-					<div class="caption">
-						<h4>Add a Caption here</h4>
-					</div>
-				</div>
-
-				<div class="col">
-					<h1>Latest News</h1>
-					<h2>NEW WEBSITE!!!</h2>
-					<p>Built entirely from scratch this new site aims to bring better content Delivery than the old <a
-							onclick="openExternal('spatialdzn.weebly.com/')">Weebly Site</a>, this will allow for better
-						optimization and quicker updates. The new site will be hosted using Google Domains and GitHub
-						and be completely maintained and coded by Me.</p>
-				</div>
+		  	<div class="latest-updates">
+				<div class="thumbnail"></div>
+				
+				<div class="update-divider"></div>
+				
+				<div class="update-information"></div>
 			</div>
-
 		</div>
-
-	</div>
+</div>
 	<!-- End page Content -->
 
 	<!-- Begin Footer -->
@@ -119,11 +103,12 @@
 	<script src="assets/scripts/age.js"></script>
 	<script src="assets/scripts/seasons.js"></script>
 	<script src="assets/scripts/responsive.js"></script>
-	<script>
-	// Age Display Set
+<script>
+// Age Display Set
 var ageDisplay = document.getElementById('age');
 
-ageDisplay.innerHTML = sakuraAge</script>
+ageDisplay.innerHTML = sakuraAge
+</script>
 </body>
 
 </html>
