Fixed SLACME Page

--- a/slacme-rig.html
+++ b/slacme-rig.html
@@ -96,7 +96,7 @@
 -->
 
 				<div class="download-lr download-extra" onclick="downloadSLACME(true)">Latest Release</div>
-				<div onclick="openInternal('sacr-rig')"><span class="links"Go to SACR</span></div>
+				<div onclick="openInternal('sacr-rig')"><span class="links">Go to SACR</span></div>
 			</div>
 
 		</div>
