Added Security Definition from "responsive.js" to "index.html"

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				and Website Design when I was 14. I mainly work with Minecraft Animation and build simple websites,
 				I eventually hope to turn Website Design into a career and 3D Animation into a suitable hobby. I
 				currently have an IRL Job and work within many online Minecraft production studio's. The most
-				prominant one being <a onclick="openExternal('www.youtube.com/channel/UCbT_Y7FKTmZxr-EadQs0GNA')"
+				prominant one being <a onclick="openExternal('www.youtube.com/channel/UCbT_Y7FKTmZxr-EadQs0GNA','secure')"
 					href="#">Silver Deer Entertainment</a>, for which I am
 				writting and directing a Zombie Survival Machinima called Parallel Z.
 			</p>
