Added Security Definition from "responsive.js" to "sacr-rig.html"

--- a/sacr-rig.html
+++ b/sacr-rig.html
@@ -82,7 +82,7 @@
 				<span class="file-details">File Size: 1.21MB |
 					<a onclick="openText('sacr-changelog-latest')"
 						class="download-extra">Changelog</a> |
-					<a onclick="openExternal('github.com/SakuraSedaia/SACR-MC-Rig/')" class="download-extra">GitHub
+					<a onclick="openExternal('github.com/SakuraSedaia/SACR-MC-Rig/','secure')" class="download-extra">GitHub
 						Repo</a>
 				</span>
 				<div class="download-lr download-extra" onclick="downloadSACR(true)">Latest Release</div>
