Added Security Definition from "responsive.js" to "slacme.html"

--- a/slacme-rig.html
+++ b/slacme-rig.html
@@ -87,7 +87,7 @@
 				<h1>Download LACM Sakura's Edit V2</h1>
 				<span class="file-details">File Size: 1.28MB | 
 					<a onclick="openText('slacme-changelog-latest')" class="download-extra">Changelog</a> |
-					<a onclick="openExternal('github.com/SakuraSedaia/LACM-Sakura-Edit/')" class="download-extra">GitHub
+					<a onclick="openExternal('github.com/SakuraSedaia/LACM-Sakura-Edit/','secure')" class="download-extra">GitHub
 						Repo</a>
 				</span>
 
