--- a/rig-navigation.html
+++ b/rig-navigation.html
@@ -61,11 +61,45 @@
 <!-- End Header -->
 
 	<!-- Begin page Content -->
-	<div class="rig-browser-section">
-		<p onclick="openInternal('sacr-rig')">SACR Minecraft Rig</p>
-		<p onclick="openInternal('slacme-rig')">SLACME Minecraft Rig (Depricated)</p>
-		<p onclick="openInternal('blender-assets')" hidden>Blender Assets</p>
+	<div class="cards-container">
+	<!-- Card #1 -->
+	<div class="cards-list-item-outer">
+		<div class="cards-list-item-inner" onclick="openInternal('sacr-rig')">
+			<div class="cards-list-item-thumbnail sacr-thumbnail"></div>
+
+			<div class="cards-list-item-info">
+				<a class="cards-list-item-title sacr-title">
+					<strong>Sakura's Character Rig</strong>
+				</a>
+				<span class="cards-list-item-excerp">
+					<p>An Advanced Minecraft Rig for Blender, designed to be light and feature packed for all of your needs
+						<br>
+						<br>
+						For <strong><a class="links sacr-link" onclick="openExternal('blender.org','unsecure')">Blender 2.80</a></strong> and Newer</p>
+				</span>
+			</div>
+		</div>
 	</div>
+
+	<!-- Card #2 -->
+	<div class="cards-list-item-outer">
+		<div class="cards-list-item-inner" onclick="openInternal('slacme-rig')">
+			<div class="cards-list-item-thumbnail slacme-thumbnail"></div>
+
+			<div class="cards-list-item-info">
+				<a class="cards-list-item-title slacme-title">
+					<strong>Sakura's "LACM" Edit</strong>
+				</a>
+				<span class="cards-list-item-excerp">
+					<p>An Edit of a Discontinued and Buggy Rig aimed at improving Stability
+						<br>
+						<br>
+						For <strong><a class="links slacme-link" onclick="openExternal('blender.org','unsecure')">Blender 2.80</a></strong> and Newer</p>
+				</span>
+			</div>
+		</div>
+	</div>
+</div>
 	<!-- End page Content -->
 
 	<!-- Begin Footer -->
