Updated Devwarning in index.html (In Git Website)

--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
 		<div class="xmasCounter" id="xmasContainer">Days until Christmas:
 			<span id="xmasCounter">Undefined</span>
 		</div>
-		<div class="dev-warning" id="devWarning"><strong>ATTENTION: </strong>This site is still in Development, please report any issues
-			to Sakura at <a href="#" onclick="emailSaki()">this Email</a></div>
+		<div class="dev-warning" id="devWarning"><!-- HTML Not Displayed, Developer Mode Disabled --></div>
 	</header>
 	<!-- End Header -->
 
