Update to Devwarning in sacr-rig.html
Change Made on Github.com

--- a/sacr-rig.html
+++ b/sacr-rig.html
@@ -55,7 +55,7 @@
 	<div class="xmasCounter" id="xmasContainer">Days until Christmas:
 		<span id="xmasCounter">Undefined</span>
 	</div>
-	<div class="dev-warning" id="devWarning"></div>
+	<div class="dev-warning" id="devWarning"><!-- HTML Not Displayed, Developer Mode Disabled --></div>
 </header>
 <!-- End Header -->
 			
