Update to Devwarning in slacme-rig.html
Change made on Github.com

--- a/slacme-rig.html
+++ b/slacme-rig.html
@@ -57,9 +57,7 @@
 		<span id="xmasCounter">Undefined</span>
 	</div>
 	
-	<div class="dev-warning" id="devWarning">
-		
-	</div>
+	<div class="dev-warning" id="devWarning"><!-- HTML Not Displayed, Developer Mode Disabled --></div>
 	
 	<div class="deprication-warning">
 		<strong>ATTENTION: </strong>
