Updated to many files, issues resolved

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 
 	<link rel="shortcut icon" href="assets/images/Favicon/favicon.ico" />
 
+	<!-- Internal Stylesheets -->
+	<link href="assets/styles/main_style.css" rel="stylesheet"/>
+	
+	<!-- External Stylesheets -->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 	<link href="assets/styles/main_style.css" rel="stylesheet" type="text/css" />
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 	<!-- FontAwesome Kit -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css">
 </head>
@@ -102,9 +105,10 @@
 	<script src="assets/scripts/age.js"></script>
 	<script src="assets/scripts/seasons.js"></script>
 	<script src="assets/scripts/responsive.js"></script>
+	
 <script>
 // Age Display Set
-var ageDisplay = document.getElementById('age');
+var ageDisplay = document.getElementById('age')
 
 ageDisplay.innerHTML = sakuraAge
 </script>
