--- a/index.html
+++ b/index.html
@@ -64,53 +64,93 @@
 	<!-- End Header -->
 
 	<!-- Begin page Content -->
-	<div class="index-content-section">
-		<!-- Biography -->
-	  <div class="about">
-			<div class="title">
-				<h1>Who am I</h1>
-
-			</div>
-			<p>I am a <a id="age">null</a> year old 3D Animator and Website Designer from Iowa, I started 3D
-				Animation when I was 12
-				and Website Design when I was 14. I mainly work with Minecraft Animation and build simple websites,
-				I eventually hope to turn Website Design into a career and 3D Animation into a suitable hobby. I
-				currently have an IRL Job and work within many online Minecraft production studio's. The most
-				prominant one being <a onclick="openExternal('www.youtube.com/channel/UCbT_Y7FKTmZxr-EadQs0GNA','secure')"
-					href="#">Silver Deer Entertainment</a>, for which I am
-				writting and directing a Zombie Survival Machinima called Parallel Z.
+	<div class="content-section">
+	<div class="about">
+		<div class="title">
+			<h1>Who am I</h1>
+			<p>I am a <a id="age">null</a> year old 3D Animator and Website Designer from Iowa, I started 3D Animation when I was 12 and Website Design when I was 14. I mainly work with Minecraft Animation and build simple websites, I eventually hope to turn Website Design into a carreer and 3D Animation into a suitable hobby. I currently have an IRL Job and work within many online Minecraft production studio's. The most prominant one being <a onclick="openExternal('')" class="sildeer-link">Silver Deer Entertainment</a>, for which I am writting and directing a Zombie Survival Machinima called Parallel Z.
 			</p>
 		</div>
-		
-		<!-- Updates -->
-		<div class="updates" hidden>
-		  	<div class="latest-updates">
-				<div class="thumbnail"></div>
-				
-				<div class="update-divider"></div>
-				
-				<div class="update-information"></div>
+	</div>
+	<div class="second-row">
+		<div class="index-rig-display">
+			<div class="background" style="background-image: url('https://sakura-sedaia.com/assets/images/MCRigBackgrouns/SACRThumbnail1.png')"></div>
+			<div class="content">
+				<div class="rig-display-text">
+					<h2>Check out the SACR and my Asset's page</h2>
+					<p>All 100% free with no flags attatched</p>
+				</div>
+				<div class="rig-nav">
+					<div class="btn btn-4">View SACR</div>
+					<div class="btn btn-4">View Assets</div>
+				</div>
 			</div>
 		</div>
+
+		<div class="latest-video">
+			<div class="title">
+				<h1>Latest <a href="#" class="yt-links-thick" onclick="openExternal('https://www.youtube.com/channel/UCGuwtqpTXQELvMYkv8T1zlw')">YouTube</a> Video Release</h1>
+			</div>
+			<div class="container">
+				<div class="col video">
+					<iframe width="480" height="270" src="https://www.youtube.com/embed/Pd-7xnGFuzQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+
+				<div class="col meta">
+
+					<h3>Title:</h3>
+					<div><a href="#" class="yt-links-thin" onclick="openExternal('https://www.youtube.com/channel/UCGuwtqpTXQELvMYkv8T1zlw')">Sakura Caramelldansen Dance (Filler Content)</a></div>
+					<br>
+					<h3><strong>Short Description</strong></h3>
+					<div>
+						Oh look it's a random video showing yet another animated dance, how original.. anyways I got the idea after watching some random videos and this dance has always intrigued me, anyways enjoy it
+					</div>
+					<br>
+					<div><a class="yt-links-thin">View the full Description on youtube.com</a></div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
-	<!-- End page Content -->
 
-	<!-- Begin Footer -->
-	<footer>
-		<div class="footer-contain"></div>
-	</footer>
-	<!-- End Footer -->
+<!-- Footer -->
+<div class="footer">
+	<div class="footer-desktop">
+		<div class="footer-top-container">
+			<div class="left-section footer-div">
 
-	<!-- Scripts -->
-	<script src="assets/scripts/age.js"></script>
-	<script src="assets/scripts/seasons.js"></script>
-	<script src="assets/scripts/responsive.js"></script>
-	
+				<div><a onclick="openExternal('index')" class="links" href="#">Home</a></div>
+				<div><a onclick="openExternal('sacr-rig')" class="links" href="#">SACR Rig</a></div>
+				<div><a onclick="openExternal('slacme-rig')" class="links" href="#">SLACME Rig</a></div>
+
+			</div>
+
+			<div class="right-section footer-div">
+				<div class="footer-icon links">
+					<i class="fab fa-github" onclick="openExternal('github.com/SakuraSedaia',1)"></i> Github
+				</div>
+				<div class="footer-icon links">
+					<i class="fab fa-google" onclick="openExternal('https://domains.google/',1)"></i> Google Domains
+				</div>
+				<div class="footer-icon links">
+					<i class="fab fa-codepen" onclick="openExternal('codepen.io',1)"></i> Codepen
+				</div>
+			</div>
+
+		</div>
+		<div class="footer-bottom-container">
+			<div class="footer-content">&copy; 2020 by Sakura Sedaia</div>
+		</div>
+	</div>
+</div>
+<!-- Scripts -->
+<script src="https://sakura-sedaia.com/assets/scripts/age.js"></script>
+<script src="https://sakura-sedaia.com/assets/scripts/seasons.js"></script>
+<script src="https://sakura-sedaia.com/assets/scripts/responsive.js"></script>
 <script>
-// Age Display Set
-var ageDisplay = document.getElementById('age')
-
-ageDisplay.innerHTML = sakuraAge
+	// Age Display Set
+	var ageDisplay = document.getElementById('age')
+	ageDisplay.innerHTML = sakuraAge
 </script>
 </body>
 
