--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
 	// Age Display Set
 	var ageDisplay = document.getElementById('age')
 	ageDisplay.innerHTML = sakuraAge
+	
+	// Warn of broken CSS
+window.alert("Due to unforseen error's, the SCSS converter used to build this page has failed and is not working, a fix will be applied as soon as possible")
 </script>
 </body>
 
