--- a/rig-navigation.html
+++ b/rig-navigation.html
@@ -18,88 +18,95 @@
 </head>
 
 <body>
-<!-- Header Start -->
-<header>
-	<div class="header-contain" id="header">
-		<!-- Navigation Start -->
-		<div class="navigation">
-			<div class="nav-logo">
-				<div class="logoIco"></div>
-				<div class="logoTxt" onclick="openInternal('index')"><span>Sakura Sedaia</span></div>
-			</div>
-
-			<div class="nav-contain">
-				<div class="nav-item" data-active="true" onclick="openInternal( 'index')">
-					Home
+	<!-- Header Start -->
+	<header>
+		<div class="header-contain" id="header">
+			<!-- Navigation Start -->
+			<div class="navigation">
+				<div class="nav-logo">
+					<div class="logoIco"></div>
+					<div class="logoTxt" onclick="openInternal('index')"><span>Sakura Sedaia</span></div>
 				</div>
 
-				<div class="nav-item" onclick="openInternal('rig-navigation')">Rigs</div>
-				<div class="nav-item" onclick="openInternal( 'projects')" hidden>
-					Projects
-				</div>
-				<div class="nav-item" onclick="openInternal( 'contact')" hidden>
-					Contact
+				<div class="nav-contain">
+					<div class="nav-item" data-active="true" onclick="openInternal( 'index')">
+						Home
+					</div>
+
+					<div class="nav-item" onclick="openInternal('rig-navigation')">Rigs</div>
+					<div class="nav-item" onclick="openInternal( 'projects')" hidden>
+						Projects
+					</div>
+					<div class="nav-item" onclick="openInternal( 'contact')" hidden>
+						Contact
+					</div>
 				</div>
 			</div>
+			<!-- Navigation End -->
+
+			<!-- Header Content -->
+			<div class="header-content">
+				<div class="header-text">
+					<h1>Personal Portfolio</h1>
+					<h4>Provided by you're local Internet Neko</h4>
+				</div>
+			</div>
+
 		</div>
-		<!-- Navigation End -->
-
-		<!-- Header Content -->
-		<div class="header-content">
-			<div class="header-text">
-				<h1>Personal Portfolio</h1>
-				<h4>Provided by you're local Internet Neko</h4>
-			</div>
+		<div class="xmasCounter" id="xmasContainer">Days until Christmas:
+			<span id="xmasCounter">Undefined</span>
 		</div>
-
-	</div>
-	<div class="xmasCounter" id="xmasContainer">Days until Christmas:
-		<span id="xmasCounter">Undefined</span>
-	</div>
-	<div class="dev-warning" id="devWarning"><!-- HTML Not Displayed, Developer Mode Disabled --></div>
-</header>
-<!-- End Header -->
+		<div class="dev-warning" id="devWarning">
+			<!-- HTML Not Displayed, Developer Mode Disabled -->
+		</div>
+	</header>
+	<!-- End Header -->
 
 	<!-- Begin page Content -->
 	<div class="cards-container">
-	<!-- Card #1 -->
-	<div class="cards-list-item-outer">
-		<div class="cards-list-item-inner" onclick="openInternal('sacr-rig')">
-			<div class="cards-list-item-thumbnail sacr-thumbnail"></div>
+		<!-- Card #1 -->
+		<div class="cards-list-item-outer">
+			<div class="cards-list-item-inner" onclick="openInternal('sacr-rig')">
+				<div class="cards-list-item-thumbnail sacr-thumbnail"></div>
 
-			<div class="cards-list-item-info">
-				<a class="cards-list-item-title sacr-title">
-					<strong>Sakura's Character Rig</strong>
-				</a>
-				<span class="cards-list-item-excerp">
-					<p>An Advanced Minecraft Rig for Blender, designed to be light and feature packed for all of your needs
-						<br>
-						<br>
-						For <strong><a class="links sacr-link" onclick="openExternal('blender.org','unsecure')">Blender 2.80</a></strong> and Newer</p>
-				</span>
+				<div class="cards-list-item-info">
+					<a class="cards-list-item-title sacr-title">
+						<strong>Sakura's Character Rig</strong>
+					</a>
+					<span class="cards-list-item-excerp">
+						<p>An Advanced Minecraft Rig for Blender, designed to be light and feature packed for all of
+							your needs
+							<br>
+							<br>
+							For <strong><a class="links sacr-link"
+									onclick="openExternal('blender.org','unsecure')">Blender 2.80</a></strong> and Newer
+						</p>
+					</span>
+				</div>
+			</div>
+		</div>
+
+		<!-- Card #2 -->
+		<div class="cards-list-item-outer">
+			<div class="cards-list-item-inner" onclick="openInternal('slacme-rig')">
+				<div class="cards-list-item-thumbnail slacme-thumbnail"></div>
+
+				<div class="cards-list-item-info">
+					<a class="cards-list-item-title slacme-title">
+						<strong>Sakura's "LACM" Edit</strong>
+					</a>
+					<span class="cards-list-item-excerp">
+						<p>An Edit of a Discontinued and Buggy Rig aimed at improving Stability
+							<br>
+							<br>
+							For <strong><a class="links slacme-link"
+									onclick="openExternal('blender.org','unsecure')">Blender 2.80</a></strong> and Newer
+						</p>
+					</span>
+				</div>
 			</div>
 		</div>
 	</div>
-
-	<!-- Card #2 -->
-	<div class="cards-list-item-outer">
-		<div class="cards-list-item-inner" onclick="openInternal('slacme-rig')">
-			<div class="cards-list-item-thumbnail slacme-thumbnail"></div>
-
-			<div class="cards-list-item-info">
-				<a class="cards-list-item-title slacme-title">
-					<strong>Sakura's "LACM" Edit</strong>
-				</a>
-				<span class="cards-list-item-excerp">
-					<p>An Edit of a Discontinued and Buggy Rig aimed at improving Stability
-						<br>
-						<br>
-						For <strong><a class="links slacme-link" onclick="openExternal('blender.org','unsecure')">Blender 2.80</a></strong> and Newer</p>
-				</span>
-			</div>
-		</div>
-	</div>
-</div>
 	<!-- End page Content -->
 
 	<!-- Begin Footer -->
