Updated CSS and HTML

--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
   <!-- External Stylesheets -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link href="assets/styles/main_style.css" rel="stylesheet" type="text/css" />
-  <!-- FontAwesome Kit -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css" />
 </head>
 
 <body>
@@ -82,7 +80,7 @@
           a carreer and 3D Animation into a suitable hobby. I currently have
           an IRL Job and work within many online Minecraft production
           studio's. The most prominant one being
-          <a onclick="openExternal('')" class="sildeer-link">Silver Deer Entertainment</a>, for which I am writting and
+          <a onclick="openExternal('www.youtube.com/channel/UCbT_Y7FKTmZxr-EadQs0GNA')" class="sildeer-link" href="#">Silver Deer Entertainment</a>, for which I am writting and
           directing a Zombie Survival Machinima
           called Parallel Z.
         </p>
@@ -91,7 +89,7 @@
     <div class="second-row">
       <div class="index-rig-display">
         <div class="background"
-          style="background-image: url('https://sakura-sedaia.com/assets/images/MCRigBackgrouns/SACRThumbnail1.png')">
+          style="background-image: url('assets/images/MCRigBackgrouns/SACRThumbnail1.png')">
         </div>
         <div class="content">
           <div class="rig-display-text">
@@ -110,7 +108,7 @@
           <h1>
             Latest
             <a href="#" class="yt-links-thick"
-              onclick="openExternal('https://www.youtube.com/channel/UCGuwtqpTXQELvMYkv8T1zlw')">YouTube</a>
+              onclick="openExternal('www.youtube.com/channel/UCGuwtqpTXQELvMYkv8T1zlw')">YouTube</a>
             Video Release
           </h1>
         </div>
@@ -167,7 +165,7 @@
             Github
           </div>
           <div class="footer-icon links">
-            <i class="fab fa-google" onclick="openExternal('https://domains.google/',1)"></i>
+            <i class="fab fa-google" onclick="openExternal('domains.google/',1)"></i>
             Google Domains
           </div>
           <div class="footer-icon links">
@@ -182,9 +180,9 @@
     </div>
   </div>
   <!-- Scripts -->
-  <script src="https://sakura-sedaia.com/assets/scripts/age.js"></script>
-  <script src="https://sakura-sedaia.com/assets/scripts/seasons.js"></script>
-  <script src="https://sakura-sedaia.com/assets/scripts/responsive.js"></script>
+  <script src="assets/scripts/age.js"></script>
+  <script src="assets/scripts/seasons.js"></script>
+  <script src="assets/scripts/responsive.js"></script>
   <script>
     // Age Display Set
     var ageDisplay = document.getElementById('age')
