--- a/sacr-rig.html
+++ b/sacr-rig.html
@@ -11,77 +11,73 @@
 	<link rel="shortcut icon" href="assets/images/Favicon/favicon.ico" />
 
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-	<link href="assets/styles/main_style.css" rel="stylesheet" type="text/css" />
+	<link href="assets/styles/main_style.css" rel="stylesheet"/>
+	<link href="assets/styles/sacr-rig.css" rel="stylesheet"/>
 	<!-- FontAwesome Kit -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css">
 </head>
 
 <body>
-	<!-- Header Start -->
-	<header>
-		<div class="header-contain" id="header">
-			<!-- Navigation Start -->
-			<div class="navigation">
-				<div class="nav-logo">
-					<div class="logoIco"></div>
-					<div class="logoTxt" onclick="openInternal('index')"><span>Sakura Sedaia</span></div>
-				</div>
+	<div class="sideNav" id="sideNav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a onclick="openInternal('sacr-rig')" class="active">SACR</a>
+        <a>SLACME</a>
+        <a>Assets</a>
+    </div>
+    <div class="viewport" id="viewport">
 
-				<div class="nav-contain">
-					<div class="nav-item" data-active="true" onclick="openInternal( 'index')">
-						Home
-					</div>
+        <div class="above-nav">
+            <div class="logo" onclick="openInternal('index')"><span>Sakura Sedaia</span></div>
+            <div class="info">Personal Portfolio</div>
+            <div class="xmasCounter" id="xmasContainer">Days until Christmas:
+                <span id="xmasCounter">Undefined</span>
+            </div>
+        </div>
+        <nav class="nav">
+            <div class="nav-link" href="#" onclick="openInternal('index')">Home</div>
+            <div class="nav-link  active"  aria-current="page" onclick="openNav()">Rigs</div>
+            <div class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Projects</div>
+            <div class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Contact</div>
+        </nav>
+        <div class="header-contain" id="header"
+            style="background-image: url('assets/images/WPRenders/BarSet_Preview4.png');">
+            <!-- Header Content -->
+            <div class="header-content">
+                <div class="header-text">
+                    <h1>Personal Portfolio</h1>
+                    <h4>Provided by you're local Internet Neko</h4>
+                </div>
+            </div>
 
-					<div class="nav-item" onclick="openInternal('rig-navigation')">Rigs</div>
-					<div class="nav-item" onclick="openInternal( 'projects')" hidden>
-						Projects
-					</div>
-					<div class="nav-item" onclick="openInternal( 'contact')" hidden>
-						Contact
-					</div>
-				</div>
-			</div>
-			<!-- Navigation End -->
+        </div>
 
-			<!-- Header Content -->
-			<div class="header-content">
-				<div class="header-text">
-					<h1>Personal Portfolio</h1>
-					<h4>Provided by you're local Internet Neko</h4>
-				</div>
-			</div>
+    </div>
 
-		</div>
-		<div class="xmasCounter" id="xmasContainer">Days until Christmas:
-			<span id="xmasCounter">Undefined</span>
-		</div>
-		<div class="dev-warning" id="devWarning">
-			<!-- HTML Not Displayed, Developer Mode Disabled -->
-		</div>
-	</header>
-	<!-- End Header -->
+    </div>
+	<div class="dev-warning" id="devWarning">
+		<!-- HTML Not Displayed, Developer Mode Disabled -->
+	</div>
 
-
-	<div class="about-sacr">
+<div class="about-sacr">
 		<div class="title-sacr"
-			style="background-image: url(assets/images/MCRigBackgrouns/SACRThumbnail3.png);background-position: center;background-size: cover;">
+			style="background-image: url(assets/images/WPRenders/Sakura_OnyxV2_BlueAngel.png);background-position: center;background-size: cover;">
 			<div class="title-text">
 				<h1>Sakura's Advanced Character Rig</h1>
 				<h3>Lightweight Advanced Minecraft Character Rig built and designed by an Animator for Animators</h3>
 			</div>
 			<div class="title-bg" style="
-			background-image: url('assets/images/WPRenders/SoWModTeam_Render.png')"></div>
+			background-image: url('assets/images/WPRenders/Sakura_EnderEgg_Discovery_V2.jpg')"></div>
 
 		</div>
 
 		<!-- Rig Download -->
 		<div class="rig-download-section">
 			<div class="rds-col rds-background">
-				<img src="assets/images/WPRenders/SoWModTeam_Render.png" width="540px" alt="background">
+				<img src="assets/images/MCRigBackgrouns/SACRThumbnail4.jpg" width="540px" alt="background">
 			</div>
 			<div class="rds-col">
-				<h1>Download SACR R4.1.1 LTS</h1>
-				<span class="file-details">File Size: 1.21MB |
+				<h1>Download SACR R4.1.2 LTS</h1>
+				<span class="file-details">File Size: 3.30MB |
 					<a onclick="openText('sacr-changelog-latest')" class="download-extra">Changelog</a> |
 					<a onclick="openExternal('github.com/SakuraSedaia/SACR-MC-Rig/','secure')"
 						class="download-extra">GitHub
@@ -128,8 +124,6 @@
 		</div>
 	</div>
 
-	<!-- Scripts -->
-	<script src="assets/scripts/age.js"></script>
 	<script src="assets/scripts/seasons.js"></script>
 	<script src="assets/scripts/responsive.js"></script>
 </body>
