--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
         <div class="right-section footer-div">
           <div class="footer-icon links">
-            <i class="fab fa-github" onclick="openExternal('github.com/SakuraSedaia',1)"></i>
+            <i class="fab fa-github" onclick="openExternal('git.sakura-sedaia.com',1)"></i>
             Github
           </div>
           <div class="footer-icon links">
