Added Lost Angel Section

--- a/index.html
+++ b/index.html
@@ -72,11 +72,8 @@
           build simple websites, I eventually hope to turn Website Design into
           a carreer and 3D Animation into a suitable hobby. I currently have
           an IRL Job and work within many online Minecraft production
-          studio's. The most prominant one being
-          <a onclick="openExternal('www.youtube.com/channel/UCbT_Y7FKTmZxr-EadQs0GNA')" class="sildeer-link"
-            href="#">Silver Deer Entertainment</a>, for which I am writting and
-          directing a Zombie Survival Machinima
-          called Parallel Z.
+          studio's. Currently I am working on 3 different Projects. The Begnnings by Frostlight Studios, Parralel Z by
+          Silver Deer Entertainment, and The Lost Angel, Directed by me
         </p>
       </div>
     </div>
@@ -122,15 +119,23 @@
             <h3><strong>Short Description</strong></h3>
             <div>
               The Map Download:<br>
-              <a class="mc-link" onclick="openExternal('www.minecraft.net/en-us/minecraft-java-community-celebration',1)">"Minecraft Community Celebration"</a>
+              <a class="mc-link"
+                onclick="openExternal('www.minecraft.net/en-us/minecraft-java-community-celebration',1)">"Minecraft
+                Community Celebration"</a>
             </div>
             <br />
             <div>
-              <a class="yt-links-thin" onclick="openExternal('www.youtube.com/watch?v=BXT9TcYnQLY&t=1134s',1)">View the full Description on youtube.com</a>
+              <a class="yt-links-thin" onclick="openExternal('www.youtube.com/watch?v=BXT9TcYnQLY&t=1134s',1)">View the
+                full Description on youtube.com</a>
             </div>
           </div>
         </div>
       </div>
+    </div>
+    <div class="lost-angel">
+      <h1>The Lost Angel</h1>
+      <h2>A fight for survival</h2>
+      <p>No set release date, more information coming soon</p>
     </div>
   </div>
 
