--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="viewport" id="viewport">
 
     <div class="above-nav">
-      <div class="logo" onclick="openInternal('index')"><span>Sakura Sedaia<span></div>
+      <div class="logo" onclick="openInternal('index')"><span>Sakura Sedaia</span></div>
       <div class="info">Personal Portfolio</div>
       <div class="xmasCounter" id="xmasContainer">Days until Christmas:
         <span id="xmasCounter">Undefined</span>
@@ -54,7 +54,6 @@
 
   </div>
 
-  </div>
   <!-- End Header -->
 
   <div class="dev-warning" id="devWarning">
