Fixed HTML Elements in two more Docs

--- a/slacme-rig.html
+++ b/slacme-rig.html
@@ -29,7 +29,7 @@
 	<div class="viewport" id="viewport">
 
 		<div class="above-nav">
-			<div class="logo" onclick="openInternal('index')"><span>Sakura Sedaia<span></div>
+			<div class="logo" onclick="openInternal('index')"><span>Sakura Sedaia</span></div>
 			<div class="info">Personal Portfolio</div>
 			<div class="xmasCounter" id="xmasContainer">Days until Christmas:
 				<span id="xmasCounter">Undefined</span>
@@ -55,7 +55,6 @@
 
 	</div>
 
-	</div>
 	<!-- End Header -->
 
 	<div class="dev-warning" id="devWarning">
